# gcode_viewer

./: Cargo.toml  log.txt
src/: app.rs  back_main_app.rs  lib.rs  main.rs  utils.rs
src/app/: calculate_print_time.rs  gcode_path_3d.rs  gcode_text_editor.rs  gcode_text_editor_v2.rs  gcode_text_editor_v3.rs
wix/: main.wxs
www/: index.html  index.js  package-lock.json  package.json
