[package]
name = "gcode_viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["bytemuck"]


[dependencies]
eframe = {version = "0.21.0", path = "../egui/crates/eframe", default-features = false, features = ["accesskit", "default_fonts", "wgpu"]}
egui_extras = {version="0.21.0", path="../egui/crates/egui_extras"}
tracing-subscriber = "0.3"
bytemuck = { version = "1.7.1", optional = true }
glam = { version = "0.23"}
rfd = "0.11"

