[package]
name = "gcode_viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["bytemuck","console_error_panic_hook"]

[dependencies]
futures = "0.3"
eframe = {version = "0.21.0", path = "../egui/crates/eframe", default-features = false, features = ["accesskit", "default_fonts", "wgpu"]}
egui_extras = {version="0.21.0", path="../egui/crates/egui_extras"}
bytemuck = { version = "1.7.1", optional = true }
glam = { version = "0.23"}
rfd = "0.11"
console_error_panic_hook = { version = "0.1.6", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"

[profile.release]
opt-level = "s"