[package]
name = "gcode_viewer"
version = "0.1.0"
edition = "2021"
authors = ["Rui Kobayashi"]
description = "Tool to visualize gcode."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["bytemuck", "console_error_panic_hook"]

[dependencies]
futures = "0.3"
eframe = {version = "0.21.0", default-features = false, features = ["accesskit", "default_fonts", "wgpu"]}
egui_extras = {version="0.21.0" }
bytemuck = { version = "1.7.1", optional = true }
glam = { version = "0.23"}
rfd = "0.11"
console_error_panic_hook = { version = "0.1.6", optional = true }
egui_clip_textedit = {version="0.1.2", path="../egui_clip_textedit"}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"

[profile.release]
opt-level = "s"

[package.metadata.bundle]
name = "Gcode Viewer"
identifier = "io.github.ruikobayashi.gcodeviewer"
version = "0.1.0"
resources = ["assets", "images/**/*.png", "secrets/public_key.txt"]
copyright = "Copyright (c) Rui Kobayashi. All rights reserved."
category = "Developer Tool"
short_description = "Tool to visualize gcode."
long_description = """
Gcodeを分析し、表示・編集するツールです。
"""
#deb_depends = ["libgl1-mesa-glx", "libsdl2-2.0-0 (>= 2.0.5)"]
#osx_frameworks = ["SDL2"]
#osx_url_schemes = ["com.doe.exampleapplication"]